# pengolahan-citra-digital

./: .gitignore  README.md  flake.nix  meson.build
exercises/: meson.build
exercises/imageinfo/: main.cpp
tugas/: meson.build
tugas/laporan/: asp.typ
tugas/laporan/asp/: components.typ  layout.typ  outlines.typ  style.typ  title-page.typ
tugas/laporan/example/: bab1.typ  bab2.typ  bab3.typ  bab4.typ  contoh_laporan.typ  refs.bib
tugas/tugas2/: main.cpp
tugas/tugas3/: laporan.md  laporan.typ  main.cpp
tugas/tugas4/: .gitignore  laporan.typ  main.cpp
