executable(
  'tugas2',
  'tugas2/main.cpp',
  dependencies: [
    dependency('spdlog'),
    dependency('opencv4')
  ],
  include_directories: inc,
  install: true,
)

executable(
  'tugas3',
  'tugas3/main.cpp',
  dependencies: [
    dependency('spdlog'),
    dependency('opencv4')
  ],
  include_directories: inc,
  install: true,
)

executable(
  'tugas4',
  'tugas4/main.cpp',
  dependencies: [
    dependency('spdlog'),
    dependency('opencv4')
  ],
  include_directories: inc,
  install: true,
)